# Kheperax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
examples/: gif.py  maps_rendering.py  me_training.py  rendering.py
examples/final_distance/: final_distance_me_training.py
examples/main/: me_training.ipynb  me_training.py
examples/rendering/: gif.py
kheperax/: custom_types.py  final_distance.py  geoms.py  maps.py  maze.py  quad_task.py  rendering_tools.py  robot.py  target.py  task.py  type_fixer_wrapper.py
kheperax/envs/: env.py  kheperax_state.py  maze_maps.py  scoring.py  wrappers.py
kheperax/simu/: geoms.py  laser.py  maze.py  posture.py  robot.py
kheperax/simu_components/: geoms.py  laser.py  maze.py  posture.py  robot.py
kheperax/tasks/: config.py  final_distance.py  main.py  main_task.py  maps.py  quad.py  quad_task.py  target.py  target_task.py
kheperax/utils/: env_utils.py  rendering_tools.py  scoring_utils.py  tree_utils.py
