[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kheperax"
dynamic = ["version"]
authors = [
    {name = "Luca Grillotti and Paul Templier", email = "luca.grillotti16@imperial.ac.uk"},
]
description = "A-maze-ing environment in jax"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Quality-Diversity", "Reinforcement Learning", "JAX"]
dependencies = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "flax>=0.8.5",
    "qdax>=0.4.0",
    "tqdm>=4.66.5",
    "imageio>=2.35.1",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.4.30"]

[project.urls]
"Homepage" = "https://github.com/adaptive-intelligent-robotics/Kheperax"

[tool.setuptools.dynamic]
version = {attr = "kheperax.__version__"}

[tool.setuptools.packages.find]
include = ["kheperax", "kheperax.*"]
exclude = ["img", "output"]
